FAQ: fixed missing separator between FAQ-sections on searching, left-align search-form

--- a/skins/dragon/screen.css
+++ b/skins/dragon/screen.css
@@ -2707,6 +2707,10 @@ table.FAQ td {
    color: black;
 }
 
+table.FAQ td.FAQsearch table.FormClass { /* FAQ-search form */
+   margin: 0px;
+}
+
 table.FAQ h3.Header {
 /*   margin: 0px; */
    text-align: left;
